--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/NavMenu.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Manual Initialization
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="objFileViewer">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> OBJ file viewer
+            </NavLink>
+        </div>
     </nav>
 </div>
 
