Implemented importing obj files by drag and drop zones

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ObjFileViewer.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ObjFileViewer.razor
@@ -5,6 +5,7 @@
 @using Ab4d.SharpEngine.SceneNodes
 @using Ab4d.SharpEngine.Browser
 @using Ab4d.SharpEngine.Utilities
+@implements IDisposable
 @inject IJSRuntime JS
 
 <PageTitle>Ab4d.SharpEngine.Web - OBJ file viewer</PageTitle>
@@ -12,49 +13,75 @@
 <h1>Ab4d.SharpEngine.Web - OBJ file viewer</h1>
 
 <p>This example shows how to load user obj and mtl files with Ab4d.SharpEngine.</p>
-<p>Note that loading texture from user selected files is not supported, 
-    but when obj files are part of the blazor project, 
-    then textures can be also imported as shown wit the initially loaded teapot.</p>
+<p>Note that loading texture from user selected files is not supported. 
+    But when obj files are part of the blazor project, 
+    then textures can be also imported as shown by the initially loaded teapot.</p>
 
 <SharpEngineSceneView @ref="sharpEngineSceneView" style="width: 70%; min-width: 400px; height: 500px; margin-top: 10pt; border: solid black 1px"></SharpEngineSceneView>
 
 <br />
 <p>@_infoText</p>
 
-<br/>
-<strpng>Select the obj file to import it:<br /></strpng>
-<label>obj file: <input type="file" id="objFileInput" /></label><br />
-<label>material (mtl) file: <input type="file" id="mtlFileInput" /></label><br />
+<div id="dropZone" style="width: 70%; min-width: 400px; height: 150px; border: 2px dashed #0078d4; border-radius: 10px; text-align: center; line-height: 150px; color: #555; font-family: sans-serif; cursor: pointer;">
+Drop obj or mtl file here or click to open file picker</div>
+<input type="file" id="fileInput" accept=".obj,.mtl" style="display: none;" />
 
 <script>
+
+    const dropZone = document.getElementById('dropZone');
+    const fileInput = document.getElementById('fileInput');
+
+    let dotNetInterop;
+
+    // Click to open file picker
+    dropZone.addEventListener('click', () => fileInput.click());
+
+    // Highlight on drag over
+    dropZone.addEventListener('dragover', (e) => {
+        e.preventDefault();
+        dropZone.style.cursor = 'copy';
+        dropZone.style.backgroundColor = '#e0f3ff';
+    });
+
+    // Remove highlight on drag leave
+    dropZone.addEventListener('dragleave', () => {
+        dropZone.style.cursor = 'pointer';
+        dropZone.style.backgroundColor = '';
+    });
+
+    // Handle dropped files
+    dropZone.addEventListener('drop', (e) => {
+        e.preventDefault();
+        dropZone.style.cursor = 'pointer';
+        dropZone.style.backgroundColor = '';
+
+        const files = e.dataTransfer.files;
+        handleFiles(files);
+    });
+
+    // Handle files from file picker
+    fileInput.addEventListener('change', (e) => {
+        if (areValidFiles(files))
+            handleFiles(e.target.files);
+    });
+
+    function handleFiles(files) {
+        for (const file of files) {
+            console.log('File dropped:', file.name);
+
+            const reader = new FileReader();
+
+            reader.onload = function(e) {
+                const text = e.target.result;
+                dotNetInterop.invokeMethodAsync('FileImportedJS', file.name, text);
+            };
+
+            reader.readAsText(file);
+        }
+    }
+
     function attachFileImportHandler(dotNetHelper) {
-        document.getElementById('objFileInput').addEventListener('change', function(event) {
-            file = event.target.files[0];
-      
-            console.log('Obj file selected:', file);
-            const reader = new FileReader();
-
-            reader.onload = function(e) {
-                const text = e.target.result;
-                dotNetHelper.invokeMethodAsync('ObjFileImportedJS', file.name, text);
-            };
-
-            reader.readAsText(file);
-        });
-        
-        document.getElementById('mtlFileInput').addEventListener('change', function(event) {
-            file = event.target.files[0];
-      
-            console.log('Mtl file selected:', file);
-            const reader = new FileReader();
-
-            reader.onload = function(e) {
-                const text = e.target.result;
-                dotNetHelper.invokeMethodAsync('MtlFileImportedJS', file.name, text);
-            };
-
-            reader.readAsText(file);
-        });
+        dotNetInterop = dotNetHelper;
     }
 </script>
 
@@ -68,7 +95,12 @@
     private PointerCameraController? _pointerCameraController;
 
     private GroupNode? _importedSceneNode;
+
+    private string? _lastObjFileName;
     private string? _lastObjFileContent;
+
+    private string? _lastMtlFileName;
+    private string? _lastMtlFileContent;
 
     private DotNetObjectReference<ObjFileViewer>? _thisJSReference;
 
@@ -149,68 +181,77 @@
         _thisJSReference = DotNetObjectReference.Create(this);
         await JS.InvokeVoidAsync("attachFileImportHandler", _thisJSReference);
     }
-    
+
     [JSInvokable]
-    public void ObjFileImportedJS(string fileName, string objFileContent)
+    public void FileImportedJS(string fileName, string fileContent)
+    {
+        if (fileName.EndsWith(".obj", StringComparison.OrdinalIgnoreCase))
+        {
+            _lastObjFileName = fileName;
+            _lastObjFileContent = fileContent;
+
+            _lastMtlFileName = null;
+            _lastMtlFileContent = null;
+
+            ImportDroppedObjFile();
+
+            ShowInfoMessage($"3D models from {fileName} file imported. Select mtl file to also import materials.");
+        }
+        else if (fileName.EndsWith(".mtl", StringComparison.OrdinalIgnoreCase))
+        {
+            if (_lastObjFileContent != null)
+            {
+                _lastMtlFileName = fileName;
+                _lastMtlFileContent = fileContent;
+
+                ImportDroppedObjFile();
+
+                ShowInfoMessage($"Materials from {fileName} file imported");
+            }
+            else
+            {
+                ShowInfoMessage("Cannot import mtl file because obj file was not imported. Select obj file first.");
+            }
+        }
+        else
+        {
+            ShowInfoMessage($"File '{fileName}' not supported. Only obj and mtl files can be dropped here.");
+        }
+    }
+
+    private void ImportDroppedObjFile()
     {
         var scene = sharpEngineSceneView.Scene;
 
         if (_importedSceneNode != null)
         {
             scene.RootNode.Remove(_importedSceneNode);
+            _importedSceneNode.DisposeAllChildren(disposeMeshes: true, disposeMaterials: true, disposeTextures: true);
             _importedSceneNode = null;
         }
 
-        var objImporter = new ObjImporter(sharpEngineSceneView.Scene);
-
-        var importedNode = objImporter.Import(objFileContent, mtlFileContent: null);
-
-        Utilities.ModelUtils.PositionAndScaleSceneNode(importedNode, new Vector3(0, 0, 0), PositionTypes.Bottom, new Vector3(100, 100, 100));
-
-        sharpEngineSceneView.Scene.RootNode.Add(importedNode);
-        _importedSceneNode = importedNode;
-        _lastObjFileContent = objFileContent;
-
-        ShowInfoMessage($"3D models from {fileName} file imported. Select mtl file to also import materials.");
-    }
-    
-    [JSInvokable]
-    public void MtlFileImportedJS(string fileName, string mtlFileContent)
-    {
-        if (_lastObjFileContent == null)
-        {
-            ShowInfoMessage("Cannot import mtl file because obj file was not imported. Select obj file first.");
+        if (string.IsNullOrEmpty(_lastObjFileContent))
             return;
-        }
-
-        var scene = sharpEngineSceneView.Scene;
-
-        if (_importedSceneNode != null)
-        {
-            scene.RootNode.Remove(_importedSceneNode);
-            _importedSceneNode = null;
-        }
 
         var objImporter = new ObjImporter(sharpEngineSceneView.Scene);
 
-        var importedNode = objImporter.Import(_lastObjFileContent, mtlFileContent);
+        var importedNode = objImporter.Import(_lastObjFileContent, _lastMtlFileContent);
 
         Utilities.ModelUtils.PositionAndScaleSceneNode(importedNode, new Vector3(0, 0, 0), PositionTypes.Bottom, new Vector3(100, 100, 100));
 
         sharpEngineSceneView.Scene.RootNode.Add(importedNode);
         _importedSceneNode = importedNode;
-
-        ShowInfoMessage($"Materials from {fileName} file imported");
-    }
-
-    public void Dispose()
-    {
-        _thisJSReference?.Dispose();
     }
 
     private void ShowInfoMessage(string message)
     {
         _infoText = message;
         StateHasChanged(); // Forces UI refresh (this is required because this event is called outside of Blazor rendering)
+    }
+
+    public void Dispose()
+    {
+        _thisJSReference?.Dispose();
+        sharpEngineSceneView.Dispose();
     }
 }
